[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-aerospike-enterprise"
description = "The Aerospike Enterprise check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "aerospike enterprise",
]
authors = [
    { name = "Aerospike", email = "support@aerospike.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=37.0.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []
test = [
  "pytest",
  "prometheus-client",
  "datadog-checks-dev"
]

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/aerospike_enterprise/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
packages = ["datadog_checks/aerospike_enterprise"]
include = [
    "/datadog_checks/aerospike_enterprise",
]
dev-mode-dirs = [
    ".",
]
