[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-aws-pricing"
description = "The AWS Pricing check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "aws_pricing",
]
authors = [
    { email = "tsein@brightcove.com" },
    { name = "Devin Young", email = "dyoung@pagerduty.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "boto3>=1.28.0",
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/aws_pricing/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/aws_pricing",
]
dev-mode-dirs = [
    ".",
]
