[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-clickhouse-cloud"
description = "The ClickHouse Cloud check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "clickhouse_cloud",
]
authors = [
    { name = "Rahul Jain", email = "rahuljain3109@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=37.20.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/clickhouse_cloud/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/clickhouse_cloud",
]
dev-mode-dirs = [
    ".",
]
