[build-system]
requires = [
    "hatchling>=0.12.0",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-cloudnatix"
description = "The cloudnatix check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "cloudnatix",
]
authors = [
    { email = "dev@cloudnatix.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=23.7.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/cloudnatix/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/cloudnatix",
]
dev-mode-dirs = [
    ".",
]
