[build-system]
requires = [
    "hatchling>=0.12.0",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-cloudsmith"
description = "The Cloudsmith check"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "cloudsmith",
]
authors = [
    { email = "ccarey@cloudsmith.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=11.2.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/cloudsmith/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/cloudsmith",
]
dev-mode-dirs = [
    ".",
]
