[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-cybersixgill-actionable-alerts"
description = "The cybersixgill_actionable_alerts check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "cybersixgill_actionable_alerts",
]
authors = [
    { name = "Farukh Shaik", email = "fshaik@loginsoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
    "sixgill-clients>=0.2.24",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/cybersixgill_actionable_alerts/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/cybersixgill_actionable_alerts",
]
dev-mode-dirs = [
    ".",
]
