[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-awesome"
description = "The Awesome check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "emily_awesome",
]
authors = [
    { name = "emily", email = "emily@emily.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/marketplace"

[tool.hatch.version]
path = "datadog_checks/emily_awesome/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/emily_awesome",
]
dev-mode-dirs = [
    ".",
]
