[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-emqx"
description = "The EMQX check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "emqx",
]
authors = [
    { name = "emqx", email = "zhongwen.deng@emqx.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/emqx/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/emqx",
]
dev-mode-dirs = [
    ".",
]
