[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
    "fiddler-client",
]
build-backend = "hatchling.build"

[project]
name = "datadog-fiddler"
description = "The fiddler check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "fiddler",
]
authors = [
    { name = "DannyBrock", email = "danny@fiddler.ai" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = [
    "fiddler-client",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/fiddler/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/requirements-dev.txt",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/fiddler",
]
dev-mode-dirs = [
    ".",
]
