[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-fluent-bit"
description = "The Fluent Bit check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "fluent_bit",
    "fluent bit",
    "fluentbit"
]
authors = [
    { name = "zhenyami", email = "zhenyamzk+GitHub@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/fluent_bit/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/requirements-dev.txt",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/fluent_bit",
]
dev-mode-dirs = [
    ".",
]
