[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-gitea"
description = "The Gitea check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "gitea",
]
authors = [
    { name = "Florent Clarret", email = "florent.clarret@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=25.3.1",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/gitea/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/requirements-dev.txt",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/gitea",
]
dev-mode-dirs = [
    ".",
]
