[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-huntress"
description = "The Huntress SIEM integration for Datadog"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "huntress",
    "siem",
    "security",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=37.11.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/huntress/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/huntress",
]
dev-mode-dirs = [
    ".",
]
