[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-kamailio"
description = "The kamailio check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "kamailio",
    "sip",
    "sips",
    "wss",
    "voip",
    "proxy",
    "server",
    "telephony",
    "webrtc",
]
authors = [
    { name = "Tyler Moore", email = "tmoore@dopensource.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Communications :: Telephony",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
    "psutil>=5.7.0",
    "requests>=2.22.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/kamailio/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/kamailio",
]
dev-mode-dirs = [
    ".",
]
