[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-linux-psi"
description = "The Linux PSI (Pressure Stall Information) check"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "linux_psi",
    "psi",
    "pressure stall information",
]
authors = [
    { name = "voseghale", email = "umaralfred32@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=37.33.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/linux_psi/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/linux_psi",
]
dev-mode-dirs = [
    ".",
]
