[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-purefa"
description = "The Pure Storage FlashArray check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "purefa",
]
authors = [
    { name = "Pure Storage Observability Team (@chrroberts-pure)", email = "pure-observability@purestorage.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "datadog-checks-base>=23.2.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/purefa/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/requirements-dev.txt",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/purefa",
]
dev-mode-dirs = [
    ".",
]
