[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-robust-intelligence-ai-firewall"
description = "The Robust Intelligence AI Firewall check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "robust_intelligence_ai_firewall",
]
authors = [
    { name = "Mayank Rajoria", email = "contact@robustintelligence.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/robust_intelligence_ai_firewall/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/robust_intelligence_ai_firewall",
]
dev-mode-dirs = [
    ".",
]
